
FEATURE  Audit MAME ROMs for all machines.

FEATURE  Show SL ROMs of a SL entry. Supports Merged, Split and Non-merged sets and SL CHDs.

WIP      Audit SL ROMs.

FEATURE  Display MAMEINFO.DAT information.

FEATURE  Display HISTORY.DAT in information.

FEATURE  Display gameinit.dat in information.

FEATURE  Display command.dat in information.

WIP      At launching, do not check ROMs for machines which doesn't have ROMs.
         Requires loading machines database, which will slow down launching process a lot!
         A hashed database of machines is necessary to speed up plugin.

FEATURE  Allow user to choose default assets as AEL does in addon seetings.

FEATURE  Trailer support in MAME machines and Software Lists.

WIP      Manage MAME Favourites context menu.

WIP      Manage SL Favourites context menu.


[B]Advanced Emulator Launcher | version 0.9.3 | 30 May 2017[/B]

FEATURE  Ability to choose default Icon and Fanart for MAME and SL ROMs in addon settings.

FEATURE  "Parent only" view mode.

FEATURE  Plugin speed has been increased a lot owing to a brand new database design.

FEATURE  Unified catalog system and new machine rendering method.
         Requires wiping of ADDON_DATA_DIR to avoid problems.

FEATURE  Properties can be configured for every individual list in AML.

FEATURE  New Status Device flag. Marks wheter a device is mandatory or not.

FEATURE  Show database statistics.

FEATURE  Favourite MAME machines.

FEATURE  Favourite Software Lists ROMs.

FEATURE  Scan SL assets/artwork.

FEATURE  Manage MAME Favourites.


[B]Advanced Emulator Launcher | version 0.9.2 | 12 February 2017[/B]

FEATURE  Ability to sort cataloged filters by number of machines.

FEATURE  New Main Filter "Machines with no ROMs".

FEATURE  Launch parents with no clones from the parents list in Catalogued filters.

FEATURE  Use a fancy name for well-known MAME drivers.

FEATURE  On filter `Machines by Software List`, substitute short SL name by the proper SL name.
