@@ -50,9 +50,10 @@ FEATURE  Display gameinit.dat in information.
 
 FEATURE  Display command.dat in information.
 
-WIP      At launching, do not check ROMs for machines which doesn't have ROMs.
+FEATURE  At launching, do not check ROMs for machines which doesn't have ROMs.
          Requires loading machines database, which will slow down launching process a lot!
          A hashed database of machines is necessary to speed up plugin.
+         Better solution for now: do not do any check. Let MAME fail if there are ROM/CHD errors.
 
 FEATURE  Allow user to choose default assets as AEL does in addon seetings.
 
